--- a/mini_insta/templates/mini_insta/logged_out.html
+++ b/mini_insta/templates/mini_insta/logged_out.html
@@ -1,3 +1,9 @@
+<!-- 
+File: mini_insta/logged_out.html
+Author: Aaron Huang (ahuan@bu.edu), 10/23/2025
+Description: The logged_out handles displaying a confirmation page that the user has been logged out.
+-->
+
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
