--- a/mini_insta/templates/mini_insta/login.html
+++ b/mini_insta/templates/mini_insta/login.html
@@ -1,3 +1,9 @@
+<!-- 
+File: mini_insta/login.html
+Author: Aaron Huang (ahuan@bu.edu), 10/23/2025
+Description: The login page handles displaying a built in django login form for the user to log themselves into instagram.
+-->
+
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
