--- a/static/mini_insta_styles.css
+++ b/static/mini_insta_styles.css
@@ -341,3 +341,9 @@ textarea[name="caption"] {
   outline: 3px solid #111;    
   box-shadow: 0 0 0 2px #fff inset;
 }
+
+
+nav .logout-form{
+  display:inline;
+  margin:0;
+}
