--- a/dadjokes/templates/dadjokes/show_all_images.html
+++ b/dadjokes/templates/dadjokes/show_all_images.html
@@ -1,10 +1,19 @@
+<!-- 
+File: dadjokes/show_all_images.html
+Author: Aaron Huang (ahuan@bu.edu), 11/14/2025
+Description: This page shows all images in a list format.
+-->
+
 {% extends 'dadjokes/base.html' %}
 
 {% block content %}
     <h1>All Images</h1>
     <ul>
+        <!-- iterate through all the pictures and get the url to display it and the pk to link to the detailed page -->
         {% for picture in pictures %}
-            <li><img src="{{picture.get_image_url}}"/></li>
+        <div class="card">
+            <a href="{% url 'picture_detail' picture.pk %}"><li><img src="{{picture.get_image_url}}"/></li></a>
+        </div>
         {% endfor %}
     </ul>
 {% endblock %}
