--- a/dadjokes/templates/dadjokes/base.html
+++ b/dadjokes/templates/dadjokes/base.html
@@ -1,12 +1,31 @@
+<!-- 
+File: dadjokes/base.html
+Author: Aaron Huang (ahuan@bu.edu), 11/14/2025
+Description: The base.html template provides a common structure for all pages in the application, including a navigation bar and footer.
+-->
+
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" href="{% static 'dad_jokes_styles.css' %}">
+    <title>Dad Jokes</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <div class="page">
+        <nav>
+            <ul>
+                <li><a href="{% url 'random_joke' %}">Random Joke</a></li>
+                <li><a href="{% url 'joke_list' %}">All Jokes</a></li>
+                <li><a href="{% url 'picture_list' %}">All Images</a></li>
+            </ul>
+        </nav>
+        
+            {% block content %}
+            {% endblock %}
+    </div>
 </body>
 </html>
