--- a/dadjokes/templates/dadjokes/show_all_jokes.html
+++ b/dadjokes/templates/dadjokes/show_all_jokes.html
@@ -1,10 +1,20 @@
+<!-- 
+File: dadjokes/show_all_jokes.html
+Author: Aaron Huang (ahuan@bu.edu), 11/14/2025
+Description: This page shows all the jokes in list format.
+-->
+
 {% extends 'dadjokes/base.html' %}
 
 {% block content %}
     <h1>All Dad Jokes</h1>
     <ul>
+        <!-- iterate through all the jokes and get the joke in .text, as well as the pk to link it to the detail page -->
         {% for joke in jokes%}
-            <li>{{joke.text}}</li>
+        <div class="card">
+            <a href="{% url 'joke_detail' joke.pk%}"><li>{{joke.text}}</li></a>
+            <p>--{{joke.name}}</p>
+        </div>
         {% endfor %}
     </ul>
 {% endblock %}
